[package]
name = "divertask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3"
time = "0.3.11"
nanoid = "0.4.0"
rustc-serialize = "0.3.24"
bytevec = "0.2.0"
timer = "0.2.0"
chrono = "0.4.19"
actix-web = "4"
